# ai-audio-upscaler

./: .flake8  .gitleaks.toml  .polaris.yml  .pre-commit-config.yaml  .secrets.baseline  COMPREHENSIVE_DOCUMENTATION.md.resolved  IMPROVEMENTS_SUMMARY.md  README.md  SECURITY.md  Start_Upscaler.bat  WHITEPAPER.md  alembic.ini  pyproject.toml  setup.py  test_results.txt  train.py  tuning.py
.github/workflows/: security-scan.yml
.infracodebase/: ai-upscaler-enhanced-architecture.json  security-monitoring-architecture.json
ai_audio_upscaler/: cli.py  config.py  converter.py  dsp_basic.py  hardware.py  memory_manager.py
ai_audio_upscaler/__pycache__/: dsp_advanced.apply_noise_shaping_numba-227.py313.nbi
ai_audio_upscaler/ai_upscaler/: diffusion.py  discriminator.py  inference.py
ai_audio_upscaler/dsp/: __init__.py  chain.py  post_processor.py
docker/: entrypoint.sh  logging.conf
docs/: AI_GUIDELINES.md  DEEPDIVE.md  PROJECT-STRUCTURE.md  README.md  SECURITY.md  SHOWCASE.md  technical-documentation.md
docs/deployment/: TERRAFORM-VALIDATION-REPORT.md  terraform-modern-practices.md
docs/migration/: MIGRATION-PLAN.md
examples/: generate_sine_example.py
infrastructure/: README.md
infrastructure/kubernetes/manifests/production/: deployment-secure.yaml  deployment.yaml  external-secrets.yaml  pod-security-standards.yaml
infrastructure/terraform/: .gitignore  aks.tf  compliance-audit.tf  key-vault-secrets.tf  main.tf  outputs.tf  security-monitoring.tf  terraform.dev.tfvars.example  terraform.production.tfvars.example  terraform.tf  threat-protection.tf  variables.tf
infrastructure/terraform-legacy/: main.tf
infrastructure/terraform/modules/aks/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/network/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/storage/: main.tf  outputs.tf  variables.tf
legacy/original-app/ai_audio_upscaler/: analysis.py  audio_io.py  dsp_advanced.py  pipeline.py  post_processing.py  restoration.py  safety.py  security.py  separation.py
legacy/original-app/ai_audio_upscaler/__pycache__/: dsp_advanced.apply_noise_shaping_numba-227.py313.1.nbc
legacy/original-app/ai_audio_upscaler/ai_upscaler/: degradation.py  loss.py  metrics.py  model.py  spectral_model.py  transforms.py
legacy/original-app/ai_audio_upscaler/dsp/: pre_processor.py
legacy/research-docs/: crash_report.json
migrations/: env.py
migrations/versions/: 001_initial_tables.py
monitoring/: README.md
monitoring/alerting/: alerts.yaml
monitoring/grafana/dashboards/: ai-audio-upscaler-dashboard.json
monitoring/logging/: fluentd-config.yaml
monitoring/prometheus/: prometheus.yml
scripts/: deploy.sh
scripts/ci-cd/github-actions/workflows/: README.md  ci-cd.yml
scripts/development/: plan-dry-run.sh
src/ai-audio-upscaler-saas/: Dockerfile  docker-compose.yml  requirements-prod.txt  requirements.txt
src/ai-audio-upscaler-saas/app/: __init__.py
src/ai-audio-upscaler-saas/app/api/: main.py  middleware.py
src/ai-audio-upscaler-saas/app/api/routes/: audio.py  auth.py  health.py
src/ai-audio-upscaler-saas/app/core/: auth.py  config.py  database.py  monitoring.py  secrets.py  security.py  token_revocation.py
src/ai-audio-upscaler-saas/app/models/: __init__.py  user.py
src/ai-audio-upscaler-saas/app/services/: audio_processor.py  storage_service.py
src/ai-audio-upscaler-saas/app/worker/: celery.py  tasks.py
src/ai-audio-upscaler-saas/security/: container-hardening.sh
src/ai-audio-upscaler-saas/tests/security/: test_api_security.py
terraform/: .gitignore  .terraform.lock.hcl  terraform.tfvars.example  tfplan
tests/: conftest.py  test_analysis_logic.py  test_app.py  test_app_startup.py  test_audio_io.py  test_batch_processing.py  test_ddim.py  test_degradation.py  test_diffusion.py  test_forensics.py  test_generalization_fix.py  test_hardware.py  test_inference.py  test_inference_progress.py  test_js_execution.py  test_js_execution_v2.py  test_js_execution_v3.py  test_memory_management.py  test_normalization.py  test_partial_diffusion.py  test_pipeline.py  test_pipeline_comprehensive.py  test_post_processor.py  test_resampler.py  test_restoration.py  test_safety.py  test_scheduler_batch.py  test_security.py  test_security_comprehensive.py  test_separation.py  test_worker.py  verify_qc_fallback.py  verify_qc_logic.py
tests/performance/: load-test.js  stress-test.js
