[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-audio-upscaler-pro"
description = "Professional AI-powered audio upscaling with comprehensive security and quality controls"
authors = [{name = "AI Audio Upscaler Team", email = "dev@aiupscaler.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    "torch>=1.12.0",
    "torchaudio>=0.12.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "librosa>=0.9.0",
    "soundfile>=0.10.0",
    "pyloudnorm>=0.1.0",
    "gradio>=3.0.0",
    "matplotlib>=3.5.0",
    "pillow>=8.0.0",
    "psutil>=5.8.0",
    "click>=8.0.0",
    "dataclasses; python_version<'3.7'",
    "typing-extensions; python_version<'3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=2.5.0",
    "pytest-timeout>=2.1.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "bandit[toml]>=1.7.4",
    "pre-commit>=2.20.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=2.5.0",
    "pytest-timeout>=2.1.0",
]
security = [
    "bandit[toml]>=1.7.4",
    "safety>=2.0.0",
]

[project.scripts]
ai-audio-upscaler = "ai_audio_upscaler.cli:main"

[project.urls]
Homepage = "https://github.com/ai-audio/upscaler-pro"
Repository = "https://github.com/ai-audio/upscaler-pro.git"
Documentation = "https://ai-audio-upscaler-pro.readthedocs.io/"
"Bug Tracker" = "https://github.com/ai-audio/upscaler-pro/issues"

[tool.setuptools]
packages = ["ai_audio_upscaler"]

[tool.setuptools_scm]
write_to = "ai_audio_upscaler/_version.py"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "librosa.*",
    "soundfile.*",
    "pyloudnorm.*",
    "gradio.*",
    "matplotlib.*",
    "scipy.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=ai_audio_upscaler",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=70",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks tests as integration tests",
    "security: marks security-related tests",
]
timeout = 300
timeout_method = "thread"

# Coverage configuration
[tool.coverage.run]
source = ["ai_audio_upscaler"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/setup.py",
    "ai_audio_upscaler/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_process_args in tests

[tool.bandit.assert_used]
skips = ["*/tests/*", "**/test_*.py"]